--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -2399,7 +2399,7 @@ textarea.custom-input,
     }
 
     @media screen and (max-width: 768px) {
-      bottom: 2rem;
+      bottom: calc(2rem + 64px);
     }
   }
 }
