--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -2610,7 +2610,7 @@ textarea.custom-input.with-outline,
   }
 }
 
-@media screen and (max-width: 768px) and (min-width: 576px) {
+@media screen and (max-width: 768px) {
   #right-menu .close img {
     width: 32px;
     height: 32px;
