--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -2356,7 +2356,7 @@ textarea.custom-input,
         height: 24px;
       }
 
-      @media screen and (max-width: 768px) and (min-width: 576px) {
+      @media screen and (max-width: 768px) {
         width: 32px;
         height: 32px;
       }
