--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
   box-sizing: border-box;
   background-color: #ffffff;
   font-family: Source Sans Pro;
-  /* overflow: hidden; */
+  overflow-x: hidden;
 }
 html,
 body {
@@ -5977,11 +5977,11 @@ select.list-dt:focus {
     font-size: 12px;
   }
   .sidebarx_open {
-    height: 139px;
-    bottom: 139px;
+    /* height: 139px;
+    bottom: 139px; */
   }
   .sidebarx_open_button {
-    top: 77px;
+    /* top: 77px; */
   }
   .modal.fade.show.modelstyl3 .modal-dialog {
     width: calc(100% - 50px);
@@ -6531,12 +6531,14 @@ select.list-dt:focus {
     max-height: 1024px;
   }
   .sidebarx_open {
-    background-image: url(../images/threestepcaratbgipad.svg);
+    /* background-image: url(../images/threestepcaratbgipad.svg);
     bottom: 213px;
-    height: 213px;
+    height: 213px; */
+  }
+  .sidebarx_open::after {
   }
   .sidebarx_open_button {
-    top: 152px;
+    /* top: 152px; */
   }
 
   .modal.fade.modelstyl6.show .modal-dialog {
@@ -6784,6 +6786,26 @@ select.list-dt:focus {
   }
   .card-skeleton {
     width: calc(50% - 20px);
+  }
+}
+
+@media screen and (max-width: 1022px) {
+  .sidebarx_open {
+    /* background-image: url(../images/threestepcaratbgipad.svg);
+    bottom: 213px;
+    height: 213px; */
+    position: relative;
+  }
+  .sidebarx_open::after {
+    position: absolute;
+    content: "";
+    background: linear-gradient(to top, #fff, rgba(255, 255, 2555, 0));
+    width: 100%;
+    height: 150%;
+    bottom: 0;
+  }
+  .sidebarx_open_button {
+    z-index: 1;
   }
 }
 
