--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -554,6 +554,8 @@ p {
 
 #dark-overlay,
 #dark-overlay-beneath,
+#dark-overlay-calendar,
+#dark-overlay-timer,
 #dark-overlay-dropdown {
   position: fixed;
   top: 0;
@@ -574,6 +576,21 @@ p {
       display: block;
     }
   }
+}
+
+#dark-overlay-timer,
+#dark-overlay-calendar {
+  display: none;
+  z-index: 13;
+
+  &.active {
+    display: block;
+  }
+}
+
+.timepicker_wrap,
+.mc-calendar.mc-calendar--modal.mc-calendar--opened {
+  z-index: 14 !important;
 }
 
 hr {
@@ -3121,6 +3138,9 @@ textarea::placeholder {
     padding: 3.5rem 0 0;
     width: 100%;
 
+    @media screen and (max-width: 1022px) {
+      padding-top: 0;
+    }
     @media screen and (max-width: 991px) {
       flex-wrap: wrap;
     }
