--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -567,6 +567,10 @@ p {
   opacity: 0.8;
 }
 
+#dark-overlay-timer {
+  width: 100%;
+}
+
 #dark-overlay-dropdown {
   z-index: 7;
   display: none;
@@ -3004,11 +3008,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   top: 27px;
   left: 0px;
   padding-bottom: 6rem;
+  max-width: 444px;
 
   // @media screen and (max-width: 768px) {
   position: fixed;
   top: 50%;
-  transform: translateY(-50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
   // }
 
   input {
@@ -3020,7 +3026,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     color: #31353f;
     font-weight: 500;
     border-radius: 5px;
-    font-family: SourceSansPro-Regular;
+
+    outline: none;
   }
 
   .mer_tx {
